отрефакторил БД Сделал иконки новая кнопка открытия браузера с нужным акком, для удобного взаимодействия